# floreum_kernel

./: .gitignore  Cargo.toml  OSDK.toml  build.sh  iso.sh  qemu.sh  run.sh  todo.txt
.cargo/: config.toml
src/: aligned.rs  device.rs  event.rs  exchange.rs  frame.rs  handle.rs  kickstart.rs  lib.rs  limine.rs  link.rs  main.rs  memory.rs  multi.rs  panic.rs  physical.rs  print.rs  process.rs  request.rs  scheduler.rs  segment.rs  tag.rs  tagmap.rs  thread.rs  user.rs
src/architecture/: mod.rs  x86_64.rs
src/architecture/amd64/: acpi.rs  flow.rs  idt.rs  interrupts.rs  linker.ld  local.rs  memory.rs  mod.rs  msr.rs  multi.rs  port.rs  print.rs  process.rs
src/device/: mod.rs  process.rs
src/language/: english.rs  mod.rs
src/syscall/: abort.rs  debug.rs  map.rs  mod.rs
