[package]
name = "floreum_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
ostd = "0.17.1"
crossbeam = { version = "0.8.4", default-features = false, features = ["alloc"] }
elf = { version = "0.8.0", default-features = false, features = ["alloc", "to_str"] }
floreum_parser = "14.1.0"
spin = "0.10.0"

[workspace]
exclude = ["target/osdk/base", "target/osdk/test-base"]
