[package]
name = "floreum_kernel"
version = "0.6.0"
edition = "2024"

[[bin]]
name = "floreum_kernel"
test = false
bench = false

[features]
default = ["english"]
english = []

[dependencies]
acpi = "6.1.1"
limine = "0.6.3"
spin = "0.10.0"
spinning_top = "0.3.0"
talc = { version = "5.0.3", features = ["counters", "nightly"] }
x86_64 = "0.15.4"

[profile.dev]
panic = "abort"
opt-level = 's'

[profile.release]
panic = "abort"
lto = true
opt-level = 's'
